coming soon/css/style.css
/* ... */
.sellingPoints li h3, .listHeading {
  text-align: center;
  font-size: 40px;
  line-height: 1;
  text-transform: none;
  margin: 5%;
  margin-right: 20%;
}

.sellingPointsText {
  list-style: initial;
}

.sellingPointsText li p {
  margin: 12% 0% 4% 0%;
}

.bigFigures {
  /*color: #ff738e;*/
}

.tripleTransport {
  height: 120px;
  margin-left: 17%;
}

.contentTabText {
  font-size: 28px;
  line-height: 1.5;
  /*margin: 0%;*/
}

.contentTabTextList {
  font-size: 30px;
  line-height: 1.5;
  /*margin: 0%;*/
  padding: 0% !important;
}

.contentTabHeading {
  text-align: center;
}
ul {
  list-style: none;
}
.textBox {
  padding: 0% 4%;
  margin-left: 4%;
}
.textBox2 {
  width: 60%;
  margin: 0% 0 0 20%;
}

.headingIcon{
  height: 80px;
  width: 80px;
  display: inline-block;
  margin-left: 45%;
}

.headingIcon2 {
  height: 80px;
  width: 80px;
  display: inline-block;
  margin-left: 35%;
}
#headingIcona {
  margin-left: 32%;
}

#headingIconb, #headingIconc {
  margin-left: 8%;
}

/*
***********************************************
	Services
*/

#services .columns {
	padding-top: 3px;
	padding-right: 15px;
	margin-bottom: 28px;
}
#services .columns h3 {
	padding-top: 25px;
}

.servicesImage {
  width: 137px;
  height: 137px;

  /*border-radius: 30px;*/
}
#servicesImage3 {
  width: 130px;
  height: 130px;
  margin-top: 6%;
}

/*
***********************************************
	Subscribe
*/

.subscribe_form {
	overflow: hidden;
}
.subscribe_form .input_wrap {
	border: 1px solid #cdcfd0;
	margin: 0 -1px 0 0;
	float: left;
	width: 100%;
	max-width: 397px;
}
.subscribe_form input[type='email'] {
	background: none;
	border: none;
	vertical-align: top;
	color: #fff;
	width: 100%;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 16px 20px 16px;
}
.form_item {
  color: #66ccff;
}
input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #fff;
}
input::-moz-placeholder { /* Firefox 19+ */
  color: #fff;
}
input:-ms-input-placeholder { /* IE 10+ */
  color: #fff;
}
input:-moz-placeholder { /* Firefox 18- */
  color: #fff;
}

.subscribePopup {
  display: none;
  position: absolute;
  top: 40%;
  left: 36%;
  height: 270px;
  width: 470px;
  z-index: 9999;
  background-color: #ff738e;
  border: 3px solid #fff;
}
.subscribePopupWrapper {
  margin: 2%;
  height: 250px;
  width: 450px;
  border: 3px solid #fff;
}
.subscribePopupWrapper > p {
  color: white;
  font-family: 'Futura', sans-serif !important;
  font-size: 15px !important;
  padding: 4% 2% 2% 4%;
}

#mc_embed_signup {
  padding: 0% 2% 2% 6%;
}

#subscribePopupClose {
  position: absolute;
  top: 6%;
  right: 3%;
}

/*
***********************************************
	Contacts
*/

.error_block,
.success {
	color: red;
	font-weight: 300;
	padding: 15px 0;
}
.success {
	color: #fff;
}

#contacts_list {
	margin-bottom: 45px;
	font-family: 'PT Sans Narrow', sans-serif;
}
#contacts_list li {
	overflow: hidden;
	list-style: none;
	font-weight: 300;
	font-size: 15px;
	line-height: 24px;
}
#contacts_list li i {
	float: left;
	margin-right: 7px;
	color: #fff568;
}
#contacts_form {
	padding: 12px 70px 0 0;
  margin: 1%;
}
#contacts_form input[type='text'],
#contacts_form input[type='email'],
#contacts_form textarea {
	margin: 0;
	border: none;
	background: none;
	vertical-align: top;
	padding: 0;
	display: block;
	width: 100%;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	font-size: 15px;
	font-family: 'PT Sans Narrow', sans-serif;
	padding: 13px 9px 14px;
	color: #fff;
	z-index: 99;
	position: relative;
}
#contacts_form input[type='text'].error,
#contacts_form input[type='email'].error,
#contacts_form textarea.error {
	outline: 1px solid red;
}
#contacts_form textarea {
	height: 128px;
	resize: none;
}
::-webkit-input-placeholder { /* WebKit browsers */
	color:    #fff;
	opacity:  .47;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
	color:    #fff;
	opacity:  .47;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
	color:    #fff;
	opacity:  .47;
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
	color:    #fff;
	opacity:  .47;
}
#contacts_form .form_row {
	position: relative;
	border: 1px solid #cdcfd0;
	border-bottom-width: 0;
}
#contacts_form .form_row.row_last {
	border-bottom-width: 1px;
}
.form_submit {
	display: inline-block;
	font-size: 16px;
	line-height: 20px;
	text-transform: uppercase;
	color: #fff;
	font-weight: 300;
	background: rgba(194, 194, 194, .26);
	border: 1px solid #cdcfd0;
	font-family: 'Oswald', sans-serif;
	padding: 10px 22px 15px;
	-webkit-transition: all ease .5s;
	-moz-transition: all ease .5s;
	-ms-transition: all ease .5s;
	-o-transition: all ease .5s;
	transition: all ease .5s;
	cursor: pointer;
}
.form_submit:hover {
	background: none;
	color: #66ccff;
}
#contacts_form .form_submit {
	bottom: -1px;
	right: -1px;
}

#contacts_form .input_wrap {
	border: 1px solid #cdcfd0;
	margin: 0 -1px 0 0;
	float: left;
	width: 100%;
	max-width: 500px;
}

.legalLink {
	font-size: 12px;
	line-height: 20px;
  color: #fff;
	font-weight: 300;
	font-family: 'Oswald', sans-serif;
	padding: 13px 22px 15px;
}

/*
***********************************************
	Footer
*/

#footer {
	position: absolute;
	bottom: 0;
	left: 60px;
	padding: 20px 0;
}
#soc_links {
	overflow: hidden;
}
#soc_links li {
	float: left;
	list-style: none;
	font-size: 18px;
}
#soc_links li + li {
	margin-left: 7px;
}
#soc_links li a {
	color: #fff;
	-webkit-transition: all ease .5s;
	-moz-transition: all ease .5s;
	-ms-transition: all ease .5s;
	-o-transition: all ease .5s;
	transition: all ease .5s;
}
#soc_links li a:hover {
	color: #66ccff;
}

.instagram, .facebook, .twitter, .help {
  height: 25px;
  width: 25px;
}

.help {
  margin-left: 40px;
  fill: #66ccff;
}

#livechat-full{
  height: 300px !important;
  width: 400px !important;
}
.title_bg {
  background-color: #66ccff !important;
}

